feat:migrate createMappedParameterTypes to generate kotlin code
Signed-off-by: angrezichatterbox <gouthammohanraj@gmail.com>